# GitSafe

./: .gitignore  .gitsafe.toml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/gitsafe/: __init__.py  __main__.py  cli.py
src/gitsafe/config/: __init__.py  defaults.py  loader.py  schema.py
src/gitsafe/findings/: __init__.py  aggregator.py  models.py  redactor.py
src/gitsafe/git/: __init__.py  adapter.py  diff_parser.py  models.py
src/gitsafe/hooks/: __init__.py  installer.py
src/gitsafe/output/: __init__.py  json_report.py  sarif.py  terminal.py
src/gitsafe/rules/: __init__.py  models.py  registry.py
src/gitsafe/rules/builtin/: __init__.py  aws.py  entropy.py  env_files.py  keys.py  passwords.py  tokens.py
src/gitsafe/scanner/: __init__.py  engine.py  entropy.py  suppression.py
tests/: conftest.py  test_cli.py  test_config.py  test_diff_parser.py  test_entropy.py  test_output.py  test_rules.py  test_scanner.py  test_suppression.py
